@@ -6,7 +6,7 @@
 
   * JRuby Nokogiri の add_previous_sibling が以前は動いていたのに今は動かない(1.5.0 -> 1.5.1)。 #691 (ありがとう, John Shahid!)
   * JRuby バーションは URL が引数にあたえられると HTML ドキュメントを作れない。 #674 (ありがとう, John Shahid!)
-
+  * JRuby バージョンは HTMLとして nil か "" が与えられると NullPointerException を投げる。 #699
 
 == 1.5.4 / ２０１２年６月１２日
 
